# horizons_hh

./: .gitignore  Ad-hoc statistic.ipynb  Dockerfile  README.md  clear_folder_jsons.py  console_list.py  docker-compose.yml  frontend_main.py  main.py  methods.py  mydatabase.db.old  preprocessing.py  vizualization.ipynb
app/: .gitignore  Dockerfile  frontend_main.py  output.xlsx  pyproject.toml  supervisord.conf
app/data_processing/: connect.py  crud.py  data_analysis.py  data_visualization.py  utils.py
csv__/: 050063f9-b283-48d3-b701-2776a3d39b37.csv  0f6a3058-a7e2-449c-a8e7-6df94659709c.csv  2d0d2aa1-26ef-40fe-af01-267eada06018.csv  653b2026-b344-4530-b473-706de9422c17.csv  6f559192-69ff-4d1b-a235-a9647c335ab5.csv  87680969-df27-49db-b21a-b070baf9a94b.csv  88259218-88e0-46d3-b05b-a41cdd0b7deb.csv  91b6389e-3b4e-41df-8e5c-e9b876d5335c.csv  b0b15ead-c2bb-4848-975f-e4bdde84348f.csv  b211588b-da55-42d1-8374-8decefd038c4.csv  cc565aed-fee8-4185-897d-2a5f50de8efe.csv  cf259d29-235c-49d5-b2d4-a4ab3bf5910d.csv  clean_vac.csv  d376e0b7-d309-4515-a90f-8ebd5f3fb5c3.csv  f1be1451-80f5-4c4e-939f-e5a246a796a6.csv  results.csv
data_processing/: connect.py  data_analysis.py  data_parsing.py  data_visualization.py  models.py
database/: mydatabase.db
scheduller/: Dockerfile  pyproject.toml  scheduller.py
scheduller/data_processing/: data_analysis.py  data_parsing.py  utils.py
