[tool.poetry]
name = "scheduller"
version = "0.1.0"
description = ""
authors = ["Ilya Afonichev <ilya.afonichev@tmk-group.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
sqlalchemy = "^2.0.31"
requests = "^2.32.3"
schedule = "^1.2.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
